API REST: UPDATE, GET, PUT-> OK

--- a/config/serializer/Entity/WorkEntry.yaml
+++ b/config/serializer/Entity/WorkEntry.yaml
@@ -1,8 +1,8 @@
-App\Entity\Workentry:
+App\Entity\WorkEntry:
   attributes:
     id:
       groups: ['workEntry']
-    user:
+    user: 
       groups: ['workEntry']
     createdAt:
       groups: ['workEntry']
